운영 환경 변경
